Improve font-size of .tab-bar

--- a/resource/styles.less
+++ b/resource/styles.less
@@ -26,6 +26,10 @@
   }
 }
 
+.tab-bar .tab .title {
+  font-size: 1.3em;
+}
+
 atom-text-editor {
   &:extend(.font-main);
   background-color: transparent;
@@ -62,5 +66,8 @@ atom-text-editor {
     background-color: transparent;
     font-weight: bold;
   }
+}
 
+.syntax--entity.syntax--name.syntax--trait.syntax--php {
+  color: #80FFC2;
 }
